feat: update inventory and order pages

--- a/styles/pages/inventory.module.scss
+++ b/styles/pages/inventory.module.scss
@@ -89,5 +89,36 @@
                 }
             }
         }
+
+        .tableContent {
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: space-between;
+                border-bottom: 1px solid hsl(0,0,92);
+
+                li {
+                    display: block;
+                    font-weight: 600;
+                    background-color: hsl(0,0,99);
+                    width: 100%;
+                    padding: 10px 20px;
+                }
+
+                .actions {
+                    
+                    button {
+                        margin-right: 6px;
+                        background-color: hsl(71, 86, 80);
+                    }
+
+                    button:nth-child(2) {
+                        background-color: hsl(0,0,90);
+                    }
+                }
+            }
+        }
     }
 }
